kubernetes/catalog/mariadb-official/manifests/deployment.yaml
---
# Generated by InfraWeaver Community Apps from Unraid AppFeed
# Source: https://raw.githubusercontent.com/mgutt/unraid-docker-templates/main/mgutt/MariaDB-Official.xml
# Category: Tools-Utilities, Other, Network-Other
# Stars: 6093 | Downloads: 3079598502
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb-official
  namespace: mariadb-official
  labels:
    app.kubernetes.io/name: mariadb-official
    app.kubernetes.io/managed-by: infraweaver
    infraweaver.io/source: community-apps
    infraweaver.io/tier: simple
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: mariadb-official
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mariadb-official
    spec:
      securityContext:
        fsGroup: 100
        runAsUser: 99
        runAsGroup: 100
      containers:
        - name: mariadb-official
          image: mariadb
          ports:
            - containerPort: 3306
              protocol: TCP
              name: port
          startupProbe:
            tcpSocket:
              port: 3306
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 120
          readinessProbe:
            tcpSocket:
              port: 3306
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: 3306
            periodSeconds: 30
            failureThreshold: 3
          volumeMounts:
            - name: mariadb-official-data-0
              mountPath: "/var/lib/mysql"
            - name: mariadb-official-data-1
              mountPath: "/etc/mysql"
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "2Gi"
              cpu: "500m"
      volumes:
      - name: mariadb-official-data-0
        persistentVolumeClaim:
          claimName: mariadb-official-data-0
      - name: mariadb-official-data-1
        persistentVolumeClaim:
          claimName: mariadb-official-data-1
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb-official
  namespace: mariadb-official
  labels:
    app.kubernetes.io/name: mariadb-official
    infraweaver.io/source: community-apps
spec:
  selector:
    app.kubernetes.io/name: mariadb-official
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
      name: port
  type: ClusterIP
