kubernetes/catalog/mariadb-official/manifests/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mariadb-official
  namespace: mariadb-official
  labels:
    app.kubernetes.io/name: mariadb-official
    infraweaver.io/source: community-apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`mariadb-official.int.rlservers.com`)
      kind: Rule
      middlewares:
        - name: netbird-vpn-only
          namespace: traefik
      services:
        - name: mariadb-official
          port: 3306
  tls:
    secretName: int-rlservers-com-tls
